--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     border: 1px black solid;
     padding: 4vw;
     margin: 4vw;
-    background-color: mediumspringgreen;
+    background-color: #00fa9a;
 }
 
 .grid-container {
@@ -15,13 +15,12 @@ body {
     'abt you tik tum git'
     'foot foot foot foot foot';
     grid-template-columns: 20% 20% 20% 20% 20%;
-
-    grid-gap: 1vw
 }
 
 header {
     grid-area: tit;
     text-align: center;
+    color: #024b08;
 }
 header > h1 {
     font-size: 15vw;
@@ -44,19 +43,42 @@ header > h1 {
     grid-area: git;
 }
 
-.about > a, .youtube > a, .tiktok > a, .tumblr > a, .github > a{
+.about, .youtube, .tiktok, .tumblr, .github {
+    margin: 1vw;
+
+    font-family: 'Fjalla One', sans-serif;
+    text-align: center;
+
+}
+.about > a, .youtube > a, .tiktok > a, .tumblr > a, .github > a {
     text-decoration: none;
     font-size: 2vw;
-    text-align: center;
+    color: #024b08;
+
+    border: 1px #1db47a solid;
+    border-radius: 5px;
+    background-color: #1db47a;
+
+    padding-left: 3vw;
+    padding-right: 3vw;
+    padding-top: 1vw;
+    padding-bottom: 1vw;
+
+}
+.about a:hover, .youtube a:hover, .tiktok a:hover, .tumblr a:hover, .github a:hover {
+    background-color: #024b08;
+    color: #1db47a;
 }
 
 footer {
     grid-area: foot;
     text-align: center;
     font-size: 1vw;
+
+    margin-top: 20vh;
 }
 footer a {
-    border: 1px solid lightseagreen;
+    border: 1px solid #20b2aa;
     border-radius: 5px;
 
     padding: .2vw;
@@ -64,25 +86,25 @@ footer a {
 
     text-decoration: none;
 
-    background-color: lightseagreen;
-    color: white;
+    background-color: #20b2aa;
+    color: #ffffff;
 }
 footer a strong {
     font-weight: bold;
 
     padding: 0.1vw;
 
-    border: 1px solid white;
+    border: 1px solid #ffffff;
     border-radius: 5px;
 
-    background-color: white;
-    color: lightseagreen;
+    background-color: #ffffff;
+    color: #20b2aa;
 }
 footer a:hover {
-    background-color: white;
-    color: lightseagreen;
+    background-color: #ffffff;
+    color: #20b2aa;
 }
 footer a:hover strong {
-    background-color: lightseagreen;
-    color: white;
+    background-color: #20b2aa;
+    color: #ffffff;
 }
