--- a/new-new-site/pages/pagestyle.css
+++ b/new-new-site/pages/pagestyle.css
@@ -30,6 +30,10 @@ body {
     padding-left: 10px;
 }
 
+#discord {
+    text-align: center;
+}
+
 .proj {
     display: grid;
     grid-template-areas: 'link description';
