--- a/new-new-site/pages/pagestyle.css
+++ b/new-new-site/pages/pagestyle.css
@@ -13,7 +13,7 @@ body {
 }
 .flex-item {
     flex: 1 1 auto;
-    margin-bottom: 3vh;
+    margin-bottom: 5vh;
 }
 .flex-item a {
     font-size: 1.5rem;
@@ -21,13 +21,18 @@ body {
 
     border: 1px solid #1db47a;
     border-radius: 20px;
+
     background-color: #1db47a;
     color: #024b08; 
     
     margin: 5px;
     padding: 5px;
-    padding-right: 10px;
-    padding-left: 10px;
+    padding-right: 3vw;
+    padding-left: 3vw;
+}
+.flex-item a:hover {
+    background-color: #024b08;
+    color: #1db47a;
 }
 
 #discord {
