--- a/new-new-site/pages/pagestyle.css
+++ b/new-new-site/pages/pagestyle.css
@@ -3,14 +3,26 @@ body {
     font-size: 1.3rem;
     color: #024b08;
 }
+nav {
+    text-align: center;
+    padding-bottom: 30px;
+}
+nav a {
 
-.nav a {
+    border: 1px solid #20b2aa;
+    border-radius: 20px;
+
+    padding: 5px;
+    padding-right: 3vw;
+    padding-left: 3vw;
+    
     background-color: #20b2aa;
     color: #ffffff;
 }
-.nav a:hover {
+nav a:hover {
     background-color: #ffffff;
     color: #20b2aa;
+    border: 1px solid #ffffff;
 }
 
 .flex-container {
