--- a/pages/pagestyle.css
+++ b/pages/pagestyle.css
@@ -1,83 +1,112 @@
 body {
-    border: 1px black solid;
-    padding: 4vw;
-    margin: 4vw;
-    background-color: #00fa9a;
-}
-
-header {
-    grid-area: tit;
-    text-align: center;
+    font-family: 'Fjalla One', sans-serif;
+    font-size: 1.3rem;
     color: #024b08;
 }
-header > h1 {
-    font-size: 15vw;
-    font-family: 'VT323', monospace;
-}
-
-.back {
-    grid-area: back;
+nav {
     text-align: center;
-
-    margin-top: 15vh;
-    font-size: 1vw;
-    font-family: 'Fjalla One', sans-serif;
-
+    padding-bottom: 30px;
 }
-.back > a {
-    border: 1px solid #20b2aa;
-    border-radius: 5px;
+nav a {
 
+    border: 1px solid #20b2aa;
+    border-radius: 20px;
+
+    padding: 5px;
+    padding-right: 3vw;
+    padding-left: 3vw;
+    
     background-color: #20b2aa;
     color: #ffffff;
-
-    font-weight: bold;
-    padding: .5vw;
-    text-decoration: none;
-
 }
-.back a:hover {
+nav a:hover {
     background-color: #ffffff;
     color: #20b2aa;
-}
-
-footer {
-    grid-area: foot;
-    text-align: center;
-    font-size: 1vw;
-
-    margin-top: 15vh;
-    font-family: 'Fjalla One', sans-serif;
-
-}
-footer a {
-    border: 1px solid #20b2aa;
-    border-radius: 5px;
-
-    padding: .2vw;
-    margin: .2vw;
-
-    text-decoration: none;
-
-    background-color: #20b2aa;
-    color: #ffffff;
-}
-footer a strong {
-    font-weight: bold;
-
-    padding: 0.1vw;
-
     border: 1px solid #ffffff;
-    border-radius: 5px;
+}
 
-    background-color: #ffffff;
-    color: #20b2aa;
+.flex-container {
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;
+    display: flex;
+    flex-direction: wrap;
 }
-footer a:hover {
-    background-color: #ffffff;
-    color: #20b2aa;
+.flex-item {
+    flex: 1 1 auto;
+    margin-bottom: 5vh;
 }
-footer a:hover strong {
-    background-color: #20b2aa;
-    color: #ffffff;
+.flex-item a {
+    font-size: 1.5rem;
+    text-decoration: none;
+
+    border: 1px solid #1db47a;
+    border-radius: 20px;
+
+    background-color: #1db47a;
+    color: #024b08; 
+    
+    margin: 5px;
+    padding: 5px;
+    padding-right: 3vw;
+    padding-left: 3vw;
+}
+.flex-item a:hover {
+    background-color: #024b08;
+    color: #1db47a;
+}
+
+#discord {
+    text-align: center;
+}
+
+#about-container {
+    background-color: #1db47a;
+    border: 1px solid #1db47a;
+    color: #024b08;
+    border-radius: 30px;
+    
+    text-align: center;
+    padding: 1vw;
+    margin-right: 10vw;
+    margin-left: 10vw; 
+}
+
+.proj {
+    display: grid;
+    grid-template-areas: 'link description';
+    grid-template-columns: repeat(2, 50%);
+
+    grid-gap: 5px;
+
+    background-color: #1db47a;
+    color: #024b08;
+    
+    border: #1db47a 1px solid;
+    border-radius: 20px;
+    
+    text-decoration: none;
+
+    padding: 5px;
+    margin: 5px;
+}
+.link {
+    grid-area: link;
+    text-align: right;
+}
+.link > a {
+   background-color: #1db47a; 
+   color: #024b08;
+}
+.link > a:hover {
+    background-color: #024b08;
+    color: #1db47a;
+
+    border: solid 1px #1db47a;
+    border-radius: 20px;
+    padding: 5px;
+}
+.description {
+    grid-area: description;
+    text-align: left;
 }
