--- a/style.css
+++ b/style.css
@@ -1,8 +1,17 @@
+html {
+    min-height: 100%;
+    position: relative;
+}
+
 body {
     background-color: #00fa9a;
     color: #024b08;
     font-family: 'Fjalla One', sans-serif;
     font-size: 1.3rem;
+
+    padding: 0;
+    margin: 0;
+    margin-bottom: 3rem;
 }
 
 header h1 {
@@ -18,12 +27,14 @@ header h1 {
     text-align: center;
 
 }
+
 .grid-container .grid-item {
     font-size: 2.5rem;
     font-family: 'Fjalla One', sans-serif;
     font-weight: bold;
 
 }
+
 .grid-item a {
     padding: 10px;
     padding-right: 4vw;
@@ -35,20 +46,25 @@ header h1 {
     border-radius: 30px;
     background-color: #1db47a;
 }
+
 .grid-item a:hover {
     background-color: #024b08;
     color: #1db47a;
 }
 
 footer {
-    position:fixed;
-    bottom: 0;    
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    left: 0;
+
 }
-footer a{
+
+footer a {
     padding-right: 5px;
 
     border: 1px solid #20b2aa;
-    border-radius: 5px;
+    border-radius: 5px 5px 0 0;
 
     padding: .2vw;
     margin: .2vw;
@@ -58,6 +74,7 @@ footer a{
     background-color: #20b2aa;
     color: #ffffff;
 }
+
 footer a strong {
     font-weight: bold;
 
@@ -69,10 +86,12 @@ footer a strong {
     background-color: #ffffff;
     color: #20b2aa;
 }
+
 footer a:hover {
     background-color: #ffffff;
     color: #20b2aa;
 }
+
 footer a:hover strong {
     background-color: #20b2aa;
     color: #ffffff;
