--- a/style.css
+++ b/style.css
@@ -64,11 +64,14 @@ footer a {
     padding-right: 5px;
 
     border: 1px solid #20b2aa;
+    border-bottom-width: 0;
     border-radius: 5px 5px 0 0;
 
-    padding: .2vw;
-    margin: .2vw;
 
+    padding: .2vw;
+    padding-bottom: 0;
+    margin: .2vw;
+    margin-bottom: 0;
     text-decoration: none;
 
     background-color: #20b2aa;
@@ -79,6 +82,7 @@ footer a strong {
     font-weight: bold;
 
     padding: 0.1vw;
+    padding-bottom: 0;
 
     border: 1px solid #ffffff;
     border-radius: 5px;
